--- a/index.html
+++ b/index.html
@@ -130,8 +130,44 @@
                             <div class="overview__rating-average">8.6</div>
                             <div class="overview__ratong-count">429 votes</div>
                       </div>
-
                   </div>
+
+                  <div class="detail">
+                    <div class="description">
+                        <p class="paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+                        </p>
+                        <p class="paragraph">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                        </p>
+                        <ul class="list">
+                            <li class="list__item">Close to the beach</li>
+                            <li class="list__item">Breakfast included</li>
+                            <li class="list__item">Soething here</li>
+                            <li class="list__item">Free wifi in all rooms</li>
+                            <li class="list__item">Close to the beach</li>
+                            <li class="list__item">Breakfast included</li>
+                            <li class="list__item">Free Airport shuttle</li>
+                            <li class="list__item">Free wifi in all rooms</li>
+                        </ul>
+                        <div class="recommend">
+                            <p class="recommend__count">
+                                Somebody and 3 others recommend this hotel 
+                            </p>
+                            <div class="recommend__friends">
+                                <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo">
+                                <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo">
+                                <img src="img/user-5.jpg" alt="Friend 3" class="recommend__photo">
+                                <img src="img/user-6.jpg" alt="Friend 4" class="recommend__photo">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="user-reviews">
+                        User-reviews
+                    </div>
+                  </div>
+
                </main>
            </div>
        </div>
